@@ -1,10 +1,13 @@
 package at.sv.hue.api;
 
+import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.EnumSet;
 import java.util.List;
@@ -34,15 +37,16 @@ class HueApiTest {
 
     @Test
     void checkConnection_unauthorizedUser_exception() {
-        setGetResponse("/lights", "[\n" +
-                "{\n" +
-                "\"error\": {\n" +
-                "\"type\": 1,\n" +
-                "\"address\": \"/lights\",\n" +
-                "\"description\": \"unauthorized user\"\n" +
-                "}\n" +
-                "}\n" +
-                "]");
+        setGetResponse("/lights", """
+                [
+                  {
+                    "error": {
+                      "type": 1,
+                      "address": "/lights",
+                      "description": "unauthorized user"
+                    }
+                  }
+                ]""");
 
         assertThrows(BridgeAuthenticationFailure.class, () -> api.assertConnection());
     }
@@ -56,30 +60,32 @@ class HueApiTest {
 
     @Test
     void getState_unknownResourceError_exception() {
-        setGetResponse("/lights/1", "[\n" +
-                "{\n" +
-                "\"error\": {\n" +
-                "\"type\": 3,\n" +
-                "\"address\": \"/lights/1/state\",\n" +
-                "\"description\": \"resource, /lights/1/state, not available\"\n" +
-                "}\n" +
-                "}\n" +
-                "]");
+        setGetResponse("/lights/1", """
+                [
+                  {
+                    "error": {
+                      "type": 3,
+                      "address": "/lights/1/state",
+                      "description": "resource, /lights/1/state, not available"
+                    }
+                  }
+                ]""");
 
         assertThrows(ApiFailure.class, () -> getLightState(1), "resource, /lights/1/state, not available");
     }
 
     @Test
     void getState_anyOtherError_exception() {
-        setGetResponse("/lights/1", "[\n" +
-                "{\n" +
-                "\"error\": {\n" +
-                "\"type\": 1000,\n" +
-                "\"address\": \"/lights/1/state\",\n" +
-                "\"description\": \"any other error\"\n" +
-                "}\n" +
-                "}\n" +
-                "]");
+        setGetResponse("/lights/1", """
+                [
+                  {
+                    "error": {
+                      "type": 1000,
+                      "address": "/lights/1/state",
+                      "description": "any other error"
+                    }
+                  }
+                ]""");
 
         assertThrows(ApiFailure.class, () -> getLightState(1), "any other error");
     }
@@ -101,30 +107,25 @@ class HueApiTest {
     @Test
     void getState_returnsLightState_callsCorrectApiURL() {
         int lightId = 22;
-        double x = 0.6715;
-        double y = 0.3233;
-        int ct = 153;
-        int bri = 100;
-        int hue = 979;
-        int sat = 254;
-        setGetResponse("/lights/" + lightId, "{\n"
-                + "  \"state\": {\n"
-                + "    \"on\": true,\n"
-                + "    \"bri\": " + bri + ",\n"
-                + "    \"hue\": " + hue + ",\n"
-                + "    \"sat\": " + sat + ",\n"
-                + "    \"effect\": \"colorloop\",\n"
-                + "    \"xy\": [\n"
-                + "      " + x + ",\n"
-                + "      " + y + "\n"
-                + "    ],\n"
-                + "    \"ct\": " + ct + ",\n"
-                + "    \"reachable\": true\n"
-                + "  },\n"
-                + "  \"name\": \"Name 2\",\n"
-                + "  \"type\": \"Extended color light\"\n"
-                + "}\n"
-                + "\n");
+        setGetResponse("/lights/" + lightId, """
+                {
+                  "state": {
+                    "on": true,
+                    "bri": 100,
+                    "hue": 979,
+                    "sat": 254,
+                    "effect": "colorloop",
+                    "xy": [
+                      0.6715,
+                      0.3233
+                    ],
+                    "ct": 153,
+                    "reachable": true
+                  },
+                  "name": "Name 2",
+                  "type": "Extended color light"
+                }
+                """);
 
         LightState lightState = getLightState(lightId);
 
@@ -133,12 +134,12 @@ class HueApiTest {
                         .builder()
                         .on(true)
                         .reachable(true)
-                        .x(x)
-                        .y(y)
-                        .colorTemperature(ct)
-                        .brightness(bri)
-                        .hue(hue)
-                        .sat(sat)
+                        .x(0.6715)
+                        .y(0.3233)
+                        .colorTemperature(153)
+                        .brightness(100)
+                        .hue(979)
+                        .sat(254)
                         .effect("colorloop")
                         .lightCapabilities(LightCapabilities.builder()
                                                             .capabilities(EnumSet.allOf(Capability.class))
@@ -150,30 +151,25 @@ class HueApiTest {
     @Test
     void getState_differentResult_correctState() {
         int lightId = 11;
-        double x = 0.5111;
-        double y = 0.1132;
-        int ct = 100;
-        int bri = 41;
-        int hue = 6000;
-        int sat = 157;
-        setGetResponse("/lights/" + lightId, "{\n"
-                + "  \"state\": {\n"
-                + "    \"on\": false,\n"
-                + "    \"bri\": " + bri + ",\n"
-                + "    \"hue\": " + hue + ",\n"
-                + "    \"sat\": " + sat + ",\n"
-                + "    \"effect\": \"none\",\n"
-                + "    \"xy\": [\n"
-                + "      " + x + ",\n"
-                + "      " + y + "\n"
-                + "    ],\n"
-                + "    \"ct\": " + ct + ",\n"
-                + "    \"reachable\": false\n"
-                + "  },\n"
-                + "  \"name\": \"Name 2\",\n"
-                + "  \"type\": \"Extended color light\"\n"
-                + "}\n"
-                + "\n");
+        setGetResponse("/lights/" + lightId, """
+                {
+                  "state": {
+                    "on": false,
+                    "bri": 41,
+                    "hue": 6000,
+                    "sat": 157,
+                    "effect": "none",
+                    "xy": [
+                      0.5111,
+                      0.1132
+                    ],
+                    "ct": 100,
+                    "reachable": false
+                  },
+                  "name": "Name 2",
+                  "type": "Extended color light"
+                }
+                """);
 
         LightState lightState = getLightState(lightId);
 
@@ -181,12 +177,12 @@ class HueApiTest {
                 .builder()
                 .on(false)
                 .reachable(false)
-                .x(x)
-                .y(y)
-                .colorTemperature(ct)
-                .brightness(bri)
-                .hue(hue)
-                .sat(sat)
+                .x(0.5111)
+                .y(0.1132)
+                .colorTemperature(100)
+                .brightness(41)
+                .hue(6000)
+                .sat(157)
                 .effect("none")
                 .lightCapabilities(LightCapabilities.builder()
                                                     .capabilities(EnumSet.allOf(Capability.class))
@@ -198,16 +194,16 @@ class HueApiTest {
     @Test
     void getState_whiteBulbOnly_noNullPointerException() {
         int lightId = 11;
-        int bri = 41;
-        setGetResponse("/lights/" + lightId, "{\n"
-                + "  \"state\": {\n"
-                + "    \"on\": true,\n"
-                + "    \"bri\": " + bri + ",\n"
-                + "    \"reachable\": true\n"
-                + "  },\n"
-                + "  \"name\": \"Name 2\",\n"
-                + "  \"type\": \"Dimmable light\"\n"
-                + "}");
+        setGetResponse("/lights/" + lightId, """
+                {
+                  "state": {
+                    "on": true,
+                    "bri": 41,
+                    "reachable": true
+                  },
+                  "name": "Name 2",
+                  "type": "Dimmable light"
+                }""");
 
         LightState lightState = getLightState(lightId);
 
@@ -215,7 +211,7 @@ class HueApiTest {
                 .builder()
                 .on(true)
                 .reachable(true)
-                .brightness(bri)
+                .brightness(41)
                 .lightCapabilities(LightCapabilities.builder()
                                                     .capabilities(EnumSet.of(Capability.BRIGHTNESS, Capability.ON_OFF))
                                                     .build())
@@ -225,14 +221,15 @@ class HueApiTest {
     @Test
     void getState_onOffBulbOnly_noNullPointerException() {
         int lightId = 11;
-        setGetResponse("/lights/" + lightId, "{\n"
-                + "  \"state\": {\n"
-                + "    \"on\": true,\n"
-                + "    \"reachable\": true\n"
-                + "  },\n"
-                + "  \"name\": \"Name 2\",\n"
-                + "  \"type\": \"On/Off plug-in unit\"\n"
-                + "}");
+        setGetResponse("/lights/" + lightId, """
+                {
+                  "state": {
+                    "on": true,
+                    "reachable": true
+                  },
+                  "name": "Name 2",
+                  "type": "On/Off plug-in unit"
+                }""");
 
         LightState lightState = getLightState(lightId);
 
@@ -248,123 +245,125 @@ class HueApiTest {
 
     @Test
     void getGroupState_returnsListOfLightStates_ignoresUnknownLights() {
-        setGetResponse("/groups", "{\n"
-                + "  \"17\": {\n"
-                + "    \"name\": \"Group 17\",\n"
-                + "    \"lights\": [\n"
-                + "      \"8\",\n"
-                + "      \"16\",\n"
-                + "      \"21\",\n"
-                + "      \"777\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"18\": {\n"
-                + "    \"name\": \"Group 18\",\n"
-                + "    \"lights\": [\n"
-                + "      \"24\"\n"
-                + "    ]\n"
-                + "  }\n"
-                + "}");
-        setGetResponse("/lights", "{\n"
-                + "  \"8\": {\n"
-                + "    \"state\": {\n"
-                + "      \"on\": true,\n"
-                + "      \"bri\": 43,\n"
-                + "      \"hue\": 692,\n"
-                + "      \"sat\": 204,\n"
-                + "      \"effect\": \"none\",\n"
-                + "      \"xy\": [\n"
-                + "        0.6189,\n"
-                + "        0.3303\n"
-                + "      ],\n"
-                + "      \"ct\": 500,\n"
-                + "      \"alert\": \"select\",\n"
-                + "      \"colormode\": \"xy\",\n"
-                + "      \"mode\": \"homeautomation\",\n"
-                + "      \"reachable\": true\n"
-                + "    },\n"
-                + "    \"type\": \"Extended color light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 40,\n"
-                + "        \"maxlumen\": 1600,\n"
-                + "        \"colorgamuttype\": \"C\",\n"
-                + "        \"colorgamut\": [\n"
-                + "          [\n"
-                + "            0.6915,\n"
-                + "            0.3083\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.17,\n"
-                + "            0.7\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.1532,\n"
-                + "            0.0475\n"
-                + "          ]\n"
-                + "        ],\n"
-                + "        \"ct\": {\n"
-                + "          \"min\": 153,\n"
-                + "          \"max\": 500\n"
-                + "        }\n"
-                + "      }\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"16\": {\n"
-                + "    \"state\": {\n"
-                + "      \"on\": false,\n"
-                + "      \"bri\": 127,\n"
-                + "      \"alert\": \"select\",\n"
-                + "      \"mode\": \"homeautomation\",\n"
-                + "      \"reachable\": true\n"
-                + "    },\n"
-                + "    \"type\": \"Dimmable light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 5000,\n"
-                + "        \"maxlumen\": 800\n"
-                + "      }\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"21\": {\n"
-                + "    \"state\": {\n"
-                + "      \"on\": false,\n"
-                + "      \"bri\": 184,\n"
-                + "      \"ct\": 366,\n"
-                + "      \"alert\": \"select\",\n"
-                + "      \"colormode\": \"ct\",\n"
-                + "      \"mode\": \"homeautomation\",\n"
-                + "      \"reachable\": true\n"
-                + "    },\n"
-                + "    \"type\": \"Color temperature light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 200,\n"
-                + "        \"maxlumen\": 350,\n"
-                + "        \"ct\": {\n"
-                + "          \"min\": 153,\n"
-                + "          \"max\": 454\n"
-                + "        }\n"
-                + "      }\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"24\": {\n"
-                + "    \"state\": {\n"
-                + "      \"on\": false,\n"
-                + "      \"alert\": \"select\",\n"
-                + "      \"mode\": \"homeautomation\",\n"
-                + "      \"reachable\": true\n"
-                + "    },\n"
-                + "    \"type\": \"On/Off plug-in unit\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {}\n"
-                + "    }\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/groups", """
+                {
+                  "17": {
+                    "name": "Group 17",
+                    "lights": [
+                      "8",
+                      "16",
+                      "21",
+                      "777"
+                    ]
+                  },
+                  "18": {
+                    "name": "Group 18",
+                    "lights": [
+                      "24"
+                    ]
+                  }
+                }""");
+        setGetResponse("/lights", """
+                {
+                  "8": {
+                    "state": {
+                      "on": true,
+                      "bri": 43,
+                      "hue": 692,
+                      "sat": 204,
+                      "effect": "none",
+                      "xy": [
+                        0.6189,
+                        0.3303
+                      ],
+                      "ct": 500,
+                      "alert": "select",
+                      "colormode": "xy",
+                      "mode": "homeautomation",
+                      "reachable": true
+                    },
+                    "type": "Extended color light",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {
+                        "mindimlevel": 40,
+                        "maxlumen": 1600,
+                        "colorgamuttype": "C",
+                        "colorgamut": [
+                          [
+                            0.6915,
+                            0.3083
+                          ],
+                          [
+                            0.17,
+                            0.7
+                          ],
+                          [
+                            0.1532,
+                            0.0475
+                          ]
+                        ],
+                        "ct": {
+                          "min": 153,
+                          "max": 500
+                        }
+                      }
+                    }
+                  },
+                  "16": {
+                    "state": {
+                      "on": false,
+                      "bri": 127,
+                      "alert": "select",
+                      "mode": "homeautomation",
+                      "reachable": true
+                    },
+                    "type": "Dimmable light",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {
+                        "mindimlevel": 5000,
+                        "maxlumen": 800
+                      }
+                    }
+                  },
+                  "21": {
+                    "state": {
+                      "on": false,
+                      "bri": 184,
+                      "ct": 366,
+                      "alert": "select",
+                      "colormode": "ct",
+                      "mode": "homeautomation",
+                      "reachable": true
+                    },
+                    "type": "Color temperature light",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {
+                        "mindimlevel": 200,
+                        "maxlumen": 350,
+                        "ct": {
+                          "min": 153,
+                          "max": 454
+                        }
+                      }
+                    }
+                  },
+                  "24": {
+                    "state": {
+                      "on": false,
+                      "alert": "select",
+                      "mode": "homeautomation",
+                      "reachable": true
+                    },
+                    "type": "On/Off plug-in unit",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {}
+                    }
+                  }
+                }""");
 
         assertThat(getGroupStates(17)).containsExactly(
                 LightState.builder()
@@ -422,22 +421,23 @@ class HueApiTest {
 
     @Test
     void getGroupLights_returnsLightIdsForGroup_reusesSameForName() {
-        setGetResponse("/groups", "{\n"
-                + "  \"1\": {\n"
-                + "    \"name\": \"Group 1\",\n"
-                + "    \"lights\": [\n"
-                + "      \"1\",\n"
-                + "      \"2\",\n"
-                + "      \"3\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"2\": {\n"
-                + "    \"name\": \"Group 2\",\n"
-                + "    \"lights\": [\n"
-                + "      \"4\",\n"
-                + "      \"5\"\n"
-                + "    ]\n"
-                + "  }}");
+        setGetResponse("/groups", """
+                {
+                  "1": {
+                    "name": "Group 1",
+                    "lights": [
+                      "1",
+                      "2",
+                      "3"
+                    ]
+                  },
+                  "2": {
+                    "name": "Group 2",
+                    "lights": [
+                      "4",
+                      "5"
+                    ]
+                  }}""");
 
         assertThat(getGroupLights(2)).containsExactly("4", "5");
         assertThat(getGroupName(2)).isEqualTo("Group 2");
@@ -445,23 +445,24 @@ class HueApiTest {
 
     @Test
     void getAssignedGroups_givenLightId_returnsGroupIds() {
-        setGetResponse("/groups", "{\n"
-                + "  \"1\": {\n"
-                + "    \"name\": \"Group 1\",\n"
-                + "    \"lights\": [\n"
-                + "      \"1\",\n"
-                + "      \"2\",\n"
-                + "      \"3\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"2\": {\n"
-                + "    \"name\": \"Group 2\",\n"
-                + "    \"lights\": [\n"
-                + "      \"4\",\n"
-                + "      \"5\",\n"
-                + "      \"3\"\n"
-                + "    ]\n"
-                + "  }}");
+        setGetResponse("/groups", """
+                {
+                  "1": {
+                    "name": "Group 1",
+                    "lights": [
+                      "1",
+                      "2",
+                      "3"
+                    ]
+                  },
+                  "2": {
+                    "name": "Group 2",
+                    "lights": [
+                      "4",
+                      "5",
+                      "3"
+                    ]
+                  }}""");
 
         assertThat(getAssignedGroups(2)).containsExactly("1");
         assertThat(getAssignedGroups(3)).containsExactly("1", "2");
@@ -474,13 +475,14 @@ class HueApiTest {
 
     @Test
     void getGroupLights_emptyLights_exception() {
-        setGetResponse("/groups", "{\n"
-                + "  \"1\": {\n"
-                + "    \"name\": \"Group 1\",\n"
-                + "    \"lights\": [\n"
-                + "    ]\n"
-                + "  }\n"
-                + "}}");
+        setGetResponse("/groups", """
+                {
+                  "1": {
+                    "name": "Group 1",
+                    "lights": [
+                    ]
+                  }
+                }""");
 
         assertThrows(EmptyGroupException.class, () -> getGroupLights(1));
     }
@@ -501,22 +503,23 @@ class HueApiTest {
 
     @Test
     void getGroupName_returnsNameForGroupId() {
-        setGetResponse("/groups", "{\n"
-                + "  \"1\": {\n"
-                + "    \"name\": \"Group 1\",\n"
-                + "    \"lights\": [\n"
-                + "      \"1\",\n"
-                + "      \"2\",\n"
-                + "      \"3\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"2\": {\n"
-                + "    \"name\": \"Group 2\",\n"
-                + "    \"lights\": [\n"
-                + "      \"4\",\n"
-                + "      \"5\"\n"
-                + "    ]\n"
-                + "  }}");
+        setGetResponse("/groups", """
+                {
+                  "1": {
+                    "name": "Group 1",
+                    "lights": [
+                      "1",
+                      "2",
+                      "3"
+                    ]
+                  },
+                  "2": {
+                    "name": "Group 2",
+                    "lights": [
+                      "4",
+                      "5"
+                    ]
+                  }}""");
 
         String name1 = getGroupName(1);
         String name2 = getGroupName(2);
@@ -541,14 +544,15 @@ class HueApiTest {
 
     @Test
     void getLightId_returnsIdForLightName_reusesResponseForMultipleRequest() {
-        setGetResponse("/lights", "{\n"
-                + "  \"7\": {\n"
-                + "    \"name\": \"Lamp 1\"\n"
-                + "  },\n"
-                + "  \"1234\": {\n"
-                + "    \"name\": \"Lamp 2\"\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/lights", """
+                {
+                  "7": {
+                    "name": "Lamp 1"
+                  },
+                  "1234": {
+                    "name": "Lamp 2"
+                  }
+                }""");
 
         assertThat(api.getLightId("Lamp 1")).isEqualTo("7");
         assertThat(api.getLightId("Lamp 2")).isEqualTo("1234");
@@ -575,22 +579,23 @@ class HueApiTest {
 
     @Test
     void getGroupId_returnsIdForGroupName_reusesResponse() {
-        setGetResponse("/groups", "{\n"
-                + "  \"11\": {\n"
-                + "    \"name\": \"Group 1\",\n"
-                + "    \"lights\": [\n"
-                + "      \"1\",\n"
-                + "      \"2\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"789\": {\n"
-                + "    \"name\": \"Group 2\",\n"
-                + "    \"lights\": [\n"
-                + "      \"3\",\n"
-                + "      \"4\"\n"
-                + "    ]\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/groups", """
+                {
+                  "11": {
+                    "name": "Group 1",
+                    "lights": [
+                      "1",
+                      "2"
+                    ]
+                  },
+                  "789": {
+                    "name": "Group 2",
+                    "lights": [
+                      "3",
+                      "4"
+                    ]
+                  }
+                }""");
 
         assertThat(api.getGroupId("Group 1")).isEqualTo("11");
         assertThat(api.getGroupId("Group 2")).isEqualTo("789");
@@ -617,14 +622,15 @@ class HueApiTest {
 
     @Test
     void getLightName_returnsNameForLightId() {
-        setGetResponse("/lights", "{\n"
-                + "  \"7\": {\n"
-                + "    \"name\": \"Lamp 1\"\n"
-                + "  },\n"
-                + "  \"1234\": {\n"
-                + "    \"name\": \"Lamp 2\"\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/lights", """
+                {
+                  "7": {
+                    "name": "Lamp 1"
+                  },
+                  "1234": {
+                    "name": "Lamp 2"
+                  }
+                }""");
 
         assertThat(getLightName(7)).isEqualTo("Lamp 1");
         assertThat(getLightName(1234)).isEqualTo("Lamp 2");
@@ -651,36 +657,37 @@ class HueApiTest {
 
     @Test
     void getCapabilities_hasColorAndCtSupport() {
-        setGetResponse("/lights", "{\n"
-                + "  \"22\": {\n"
-                + "    \"type\": \"Extended color light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 200,\n"
-                + "        \"maxlumen\": 800,\n"
-                + "        \"colorgamuttype\": \"C\",\n"
-                + "        \"colorgamut\": [\n"
-                + "          [\n"
-                + "            0.6915,\n"
-                + "            0.3083\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.17,\n"
-                + "            0.7\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.1532,\n"
-                + "            0.0475\n"
-                + "          ]\n"
-                + "        ],\n"
-                + "        \"ct\": {\n"
-                + "          \"min\": 153,\n"
-                + "          \"max\": 500\n"
-                + "        }\n"
-                + "      }\n"
-                + "    }\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/lights", """
+                {
+                  "22": {
+                    "type": "Extended color light",
+                    "capabilities": {
+                      "control": {
+                        "mindimlevel": 200,
+                        "maxlumen": 800,
+                        "colorgamuttype": "C",
+                        "colorgamut": [
+                          [
+                            0.6915,
+                            0.3083
+                          ],
+                          [
+                            0.17,
+                            0.7
+                          ],
+                          [
+                            0.1532,
+                            0.0475
+                          ]
+                        ],
+                        "ct": {
+                          "min": 153,
+                          "max": 500
+                        }
+                      }
+                    }
+                  }
+                }""");
 
         LightCapabilities capabilities = getLightCapabilities(22);
 
@@ -701,32 +708,33 @@ class HueApiTest {
 
     @Test
     void getCapabilities_colorOnly() {
-        setGetResponse("/lights", "{\n" +
-                "\"22\": {\n" +
-                "\"type\": \"Color light\",\n" +
-                "\"capabilities\": {\n" +
-                "\"control\": {\n" +
-                "\"mindimlevel\": 200,\n" +
-                "\"maxlumen\": 800,\n" +
-                "\"colorgamuttype\": \"C\",\n" +
-                "\"colorgamut\": [\n" +
-                "[\n" +
-                "0.6915,\n" +
-                "0.3083\n" +
-                "],\n" +
-                "[\n" +
-                "0.17,\n" +
-                "0.7\n" +
-                "],\n" +
-                "[\n" +
-                "0.1532,\n" +
-                "0.0475\n" +
-                "]\n" +
-                "]\n" +
-                "}\n" +
-                "}\n" +
-                "}\n" +
-                "}");
+        setGetResponse("/lights", """
+                {
+                  "22": {
+                    "type": "Color light",
+                    "capabilities": {
+                      "control": {
+                        "mindimlevel": 200,
+                        "maxlumen": 800,
+                        "colorgamuttype": "C",
+                        "colorgamut": [
+                          [
+                            0.6915,
+                            0.3083
+                          ],
+                          [
+                            0.17,
+                            0.7
+                          ],
+                          [
+                            0.1532,
+                            0.0475
+                          ]
+                        ]
+                      }
+                    }
+                  }
+                }""");
 
         LightCapabilities capabilities = getLightCapabilities(22);
 
@@ -745,17 +753,18 @@ class HueApiTest {
 
     @Test
     void getCapabilities_brightnessOnly() {
-        setGetResponse("/lights", "{\n"
-                + "  \"7\": {\n"
-                + "    \"type\": \"Dimmable light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 5000,\n"
-                + "        \"maxlumen\": 1600\n"
-                + "      }\n"
-                + "    }\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/lights", """
+                {
+                  "7": {
+                    "type": "Dimmable light",
+                    "capabilities": {
+                      "control": {
+                        "mindimlevel": 5000,
+                        "maxlumen": 1600
+                      }
+                    }
+                  }
+                }""");
 
         LightCapabilities capabilities = getLightCapabilities(7);
 
@@ -767,39 +776,40 @@ class HueApiTest {
 
     @Test
     void getCapabilities_colorTemperatureOnly() {
-        setGetResponse("/lights", "{\n"
-                + "  \"42\": {\n"
-                + "    \"state\": {\n"
-                + "      \"on\": true,\n"
-                + "      \"bri\": 254,\n"
-                + "      \"ct\": 408,\n"
-                + "      \"alert\": \"select\",\n"
-                + "      \"colormode\": \"ct\",\n"
-                + "      \"mode\": \"homeautomation\",\n"
-                + "      \"reachable\": false\n"
-                + "    },\n"
-                + "    \"type\": \"Color temperature light\",\n"
-                + "    \"name\": \"Spot\",\n"
-                + "    \"modelid\": \"LTA001\",\n"
-                + "    \"manufacturername\": \"Signify Netherlands B.V.\",\n"
-                + "    \"productname\": \"Hue ambiance lamp\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 200,\n"
-                + "        \"maxlumen\": 800,\n"
-                + "        \"ct\": {\n"
-                + "          \"min\": 153,\n"
-                + "          \"max\": 454\n"
-                + "        }\n"
-                + "      },\n"
-                + "      \"streaming\": {\n"
-                + "        \"renderer\": false,\n"
-                + "        \"proxy\": false\n"
-                + "      }\n"
-                + "    }\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/lights", """
+                {
+                  "42": {
+                    "state": {
+                      "on": true,
+                      "bri": 254,
+                      "ct": 408,
+                      "alert": "select",
+                      "colormode": "ct",
+                      "mode": "homeautomation",
+                      "reachable": false
+                    },
+                    "type": "Color temperature light",
+                    "name": "Spot",
+                    "modelid": "LTA001",
+                    "manufacturername": "Signify Netherlands B.V.",
+                    "productname": "Hue ambiance lamp",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {
+                        "mindimlevel": 200,
+                        "maxlumen": 800,
+                        "ct": {
+                          "min": 153,
+                          "max": 454
+                        }
+                      },
+                      "streaming": {
+                        "renderer": false,
+                        "proxy": false
+                      }
+                    }
+                  }
+                }""");
 
         LightCapabilities capabilities = getLightCapabilities(42);
 
@@ -817,29 +827,30 @@ class HueApiTest {
 
     @Test
     void getCapabilities_onOffOnly() {
-        setGetResponse("/lights", "{\n"
-                + "  \"24\": {\n"
-                + "    \"state\": {\n"
-                + "      \"on\": false,\n"
-                + "      \"alert\": \"select\",\n"
-                + "      \"mode\": \"homeautomation\",\n"
-                + "      \"reachable\": true\n"
-                + "    },\n"
-                + "    \"type\": \"On/Off plug-in unit\",\n"
-                + "    \"name\": \"Smart Plug\",\n"
-                + "    \"modelid\": \"LOM001\",\n"
-                + "    \"manufacturername\": \"Signify Netherlands B.V.\",\n"
-                + "    \"productname\": \"Hue Smart plug\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {},\n"
-                + "      \"streaming\": {\n"
-                + "        \"renderer\": false,\n"
-                + "        \"proxy\": false\n"
-                + "      }\n"
-                + "    }\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/lights", """
+                {
+                  "24": {
+                    "state": {
+                      "on": false,
+                      "alert": "select",
+                      "mode": "homeautomation",
+                      "reachable": true
+                    },
+                    "type": "On/Off plug-in unit",
+                    "name": "Smart Plug",
+                    "modelid": "LOM001",
+                    "manufacturername": "Signify Netherlands B.V.",
+                    "productname": "Hue Smart plug",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {},
+                      "streaming": {
+                        "renderer": false,
+                        "proxy": false
+                      }
+                    }
+                  }
+                }""");
 
         LightCapabilities capabilities = getLightCapabilities(24);
 
@@ -858,178 +869,180 @@ class HueApiTest {
 
     @Test
     void getGroupCapabilities_returnsMaxOfAllContainedLights() {
-        setGetResponse("/lights", "{\n"
-                + "  \"42\": {\n"
-                + "    \"type\": \"Color temperature light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 200,\n"
-                + "        \"maxlumen\": 800,\n"
-                + "        \"ct\": {\n"
-                + "          \"min\": 100,\n"
-                + "          \"max\": 454\n"
-                + "        }\n"
-                + "      }\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"22\": {\n"
-                + "    \"type\": \"Color light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 200,\n"
-                + "        \"maxlumen\": 800,\n"
-                + "        \"colorgamuttype\": \"C\",\n"
-                + "        \"colorgamut\": [\n"
-                + "          [\n"
-                + "            0.6915,\n"
-                + "            0.3083\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.17,\n"
-                + "            0.7\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.1532,\n"
-                + "            0.0475\n"
-                + "          ]\n"
-                + "        ]\n"
-                + "      }\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"23\": {\n"
-                + "    \"type\": \"Color light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 200,\n"
-                + "        \"maxlumen\": 800,\n"
-                + "        \"colorgamuttype\": \"A\",\n"
-                + "        \"colorgamut\": [\n"
-                + "          [\n"
-                + "            0.704,\n"
-                + "            0.296\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.2151,\n"
-                + "            0.7106\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.138,\n"
-                + "            0.08\n"
-                + "          ]\n"
-                + "        ]\n"
-                + "      }\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"24\": {\n"
-                + "    \"type\": \"Color light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 200,\n"
-                + "        \"maxlumen\": 800,\n"
-                + "        \"colorgamuttype\": \"B\",\n"
-                + "        \"colorgamut\": [\n"
-                + "          [\n"
-                + "            0.675,\n"
-                + "            0.322\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.409,\n"
-                + "            0.518\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.167,\n"
-                + "            0.04\n"
-                + "          ]\n"
-                + "        ]\n"
-                + "      }\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"25\": {\n"
-                + "    \"type\": \"Extended color light\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {\n"
-                + "        \"mindimlevel\": 40,\n"
-                + "        \"maxlumen\": 1600,\n"
-                + "        \"colorgamuttype\": \"C\",\n"
-                + "        \"colorgamut\": [\n"
-                + "          [\n"
-                + "            0.6915,\n"
-                + "            0.3083\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.17,\n"
-                + "            0.7\n"
-                + "          ],\n"
-                + "          [\n"
-                + "            0.1532,\n"
-                + "            0.0475\n"
-                + "          ]\n"
-                + "        ],\n"
-                + "        \"ct\": {\n"
-                + "          \"min\": 153,\n"
-                + "          \"max\": 500\n"
-                + "        }\n"
-                + "      }\n"
-                + "    }\n"
-                + "  },\n"
-                + "  \"30\": {\n"
-                + "    \"type\": \"On/Off plug-in unit\",\n"
-                + "    \"capabilities\": {\n"
-                + "      \"certified\": true,\n"
-                + "      \"control\": {}\n"
-                + "    }\n"
-                + "  }\n"
-                + "}");
-        setGetResponse("/groups", "{\n"
-                + "  \"1\": {\n"
-                + "    \"name\": \"Group 1\",\n"
-                + "    \"lights\": [\n"
-                + "      \"42\",\n"
-                + "      \"22\",\n"
-                + "      \"30\",\n"
-                + "      \"25\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"2\": {\n"
-                + "    \"name\": \"Group 2\",\n"
-                + "    \"lights\": [\n"
-                + "      \"22\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"3\": {\n"
-                + "    \"name\": \"Group 3\",\n"
-                + "    \"lights\": [\n"
-                + "      \"42\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"4\": {\n"
-                + "    \"name\": \"Group 4\",\n"
-                + "    \"lights\": [\n"
-                + "      \"30\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"5\": {\n"
-                + "    \"name\": \"Group 5\",\n"
-                + "    \"lights\": [\n"
-                + "      \"23\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"6\": {\n"
-                + "    \"name\": \"Group 6\",\n"
-                + "    \"lights\": [\n"
-                + "      \"22\",\n"
-                + "      \"23\"\n"
-                + "    ]\n"
-                + "  },\n"
-                + "  \"7\": {\n"
-                + "    \"name\": \"Group 7\",\n"
-                + "    \"lights\": [\n"
-                + "      \"24\"\n"
-                + "    ]\n"
-                + "  }\n"
-                + "}");
+        setGetResponse("/lights", """
+                {
+                  "42": {
+                    "type": "Color temperature light",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {
+                        "mindimlevel": 200,
+                        "maxlumen": 800,
+                        "ct": {
+                          "min": 100,
+                          "max": 454
+                        }
+                      }
+                    }
+                  },
+                  "22": {
+                    "type": "Color light",
+                    "capabilities": {
+                      "control": {
+                        "mindimlevel": 200,
+                        "maxlumen": 800,
+                        "colorgamuttype": "C",
+                        "colorgamut": [
+                          [
+                            0.6915,
+                            0.3083
+                          ],
+                          [
+                            0.17,
+                            0.7
+                          ],
+                          [
+                            0.1532,
+                            0.0475
+                          ]
+                        ]
+                      }
+                    }
+                  },
+                  "23": {
+                    "type": "Color light",
+                    "capabilities": {
+                      "control": {
+                        "mindimlevel": 200,
+                        "maxlumen": 800,
+                        "colorgamuttype": "A",
+                        "colorgamut": [
+                          [
+                            0.704,
+                            0.296
+                          ],
+                          [
+                            0.2151,
+                            0.7106
+                          ],
+                          [
+                            0.138,
+                            0.08
+                          ]
+                        ]
+                      }
+                    }
+                  },
+                  "24": {
+                    "type": "Color light",
+                    "capabilities": {
+                      "control": {
+                        "mindimlevel": 200,
+                        "maxlumen": 800,
+                        "colorgamuttype": "B",
+                        "colorgamut": [
+                          [
+                            0.675,
+                            0.322
+                          ],
+                          [
+                            0.409,
+                            0.518
+                          ],
+                          [
+                            0.167,
+                            0.04
+                          ]
+                        ]
+                      }
+                    }
+                  },
+                  "25": {
+                    "type": "Extended color light",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {
+                        "mindimlevel": 40,
+                        "maxlumen": 1600,
+                        "colorgamuttype": "C",
+                        "colorgamut": [
+                          [
+                            0.6915,
+                            0.3083
+                          ],
+                          [
+                            0.17,
+                            0.7
+                          ],
+                          [
+                            0.1532,
+                            0.0475
+                          ]
+                        ],
+                        "ct": {
+                          "min": 153,
+                          "max": 500
+                        }
+                      }
+                    }
+                  },
+                  "30": {
+                    "type": "On/Off plug-in unit",
+                    "capabilities": {
+                      "certified": true,
+                      "control": {}
+                    }
+                  }
+                }""");
+        setGetResponse("/groups", """
+                {
+                  "1": {
+                    "name": "Group 1",
+                    "lights": [
+                      "42",
+                      "22",
+                      "30",
+                      "25"
+                    ]
+                  },
+                  "2": {
+                    "name": "Group 2",
+                    "lights": [
+                      "22"
+                    ]
+                  },
+                  "3": {
+                    "name": "Group 3",
+                    "lights": [
+                      "42"
+                    ]
+                  },
+                  "4": {
+                    "name": "Group 4",
+                    "lights": [
+                      "30"
+                    ]
+                  },
+                  "5": {
+                    "name": "Group 5",
+                    "lights": [
+                      "23"
+                    ]
+                  },
+                  "6": {
+                    "name": "Group 6",
+                    "lights": [
+                      "22",
+                      "23"
+                    ]
+                  },
+                  "7": {
+                    "name": "Group 7",
+                    "lights": [
+                      "24"
+                    ]
+                  }
+                }""");
 
         assertCapabilities(
                 getGroupCapabilities(1),
@@ -1083,13 +1096,14 @@ class HueApiTest {
     @Test
     void putState_brightness_success_callsCorrectUrl() {
         setPutResponse("/lights/" + 15 + "/state", "{\"bri\":200}",
-                "[\n" +
-                        "{\n" +
-                        "\"success\": {\n" +
-                        "\"/lights/22/state/bri\": 200\n" +
-                        "}\n" +
-                        "}\n" +
-                        "]");
+                """
+                        [
+                          {
+                            "success": {
+                              "/lights/22/state/bri": 200
+                            }
+                          }
+                        ]""");
 
         performPutCall(PutCall.builder().id("15").bri(200).build());
     }
@@ -1097,13 +1111,14 @@ class HueApiTest {
     @Test
     void putState_group_usesCorrectUrl() {
         setPutResponse("/groups/" + 9 + "/action", "{\"bri\":200}",
-                "[\n" +
-                        "{\n" +
-                        "\"success\": {\n" +
-                        "\"/groups/9/action/bri\": 200\n" +
-                        "}\n" +
-                        "}\n" +
-                        "]");
+                """
+                        [
+                          {
+                            "success": {
+                              "/groups/9/action/bri": 200
+                            }
+                          }
+                        ]""");
 
         performPutCall(PutCall.builder().id("9").bri(200).groupState(true).build());
     }
@@ -1164,30 +1179,32 @@ class HueApiTest {
 
     @Test
     void putState_unauthorized_throwsException() {
-        setPutResponse("/lights/" + 10 + "/state", "{\"bri\":100}", "[\n" +
-                "{\n" +
-                "\"error\": {\n" +
-                "\"type\": 1,\n" +
-                "\"address\": \"/lights\",\n" +
-                "\"description\": \"unauthorized user\"\n" +
-                "}\n" +
-                "}\n" +
-                "]");
+        setPutResponse("/lights/" + 10 + "/state", "{\"bri\":100}", """
+                [
+                  {
+                    "error": {
+                      "type": 1,
+                      "address": "/lights",
+                      "description": "unauthorized user"
+                    }
+                  }
+                ]""");
 
         assertThrows(BridgeAuthenticationFailure.class, () -> performPutCall(PutCall.builder().id("10").bri(100).build()));
     }
 
     @Test
     void putState_lights_resourceNotAvailable_exception() {
-        setPutResponse("/lights/" + 1 + "/state", "{\"bri\":100}", "[\n" +
-                "{\n" +
-                "\"error\": {\n" +
-                "\"type\": 3,\n" +
-                "\"address\": \"/lights/1/state\",\n" +
-                "\"description\": \"resource, /lights/1/state, not available\"\n" +
-                "}\n" +
-                "}\n" +
-                "]");
+        setPutResponse("/lights/" + 1 + "/state", "{\"bri\":100}", """
+                [
+                  {
+                    "error": {
+                      "type": 3,
+                      "address": "/lights/1/state",
+                      "description": "resource, /lights/1/state, not available"
+                    }
+                  }
+                ]""");
 
         ApiFailure apiFailure = assertThrows(ApiFailure.class, () -> performPutCall(PutCall.builder().id("1").bri(100).build()));
         assertThat(apiFailure.getMessage()).isEqualTo("resource, /lights/1/state, not available");
@@ -1195,15 +1212,16 @@ class HueApiTest {
 
     @Test
     void putState_groups_resourceNotAvailable_exception() {
-        setPutResponse("/groups/" + 1 + "/action", "{\"bri\":100}", "[\n" +
-                "{\n" +
-                "\"error\": {\n" +
-                "\"type\": 3,\n" +
-                "\"address\": \"/groups/1/action\",\n" +
-                "\"description\": \"resource, /groups/11/action, not available\"\n" +
-                "}\n" +
-                "}\n" +
-                "]");
+        setPutResponse("/groups/" + 1 + "/action", "{\"bri\":100}", """
+                [
+                  {
+                    "error": {
+                      "type": 3,
+                      "address": "/groups/1/action",
+                      "description": "resource, /groups/11/action, not available"
+                    }
+                  }
+                ]""");
 
         ApiFailure apiFailure = assertThrows(ApiFailure.class, () -> performPutCall(PutCall.builder().id("1").bri(100).groupState(true).build()));
         assertThat(apiFailure.getMessage()).isEqualTo("resource, /groups/11/action, not available");
@@ -1220,7 +1238,7 @@ class HueApiTest {
     void putState_emptyResponse_treatedAsSuccess() {
         setPutResponse("/lights/" + 123 + "/state", "{\"bri\":100}",
                 "[\n" +
-                        "]");
+                "]");
 
         performPutCall(PutCall.builder().id("123").bri(100).build());
     }
@@ -1228,16 +1246,21 @@ class HueApiTest {
     @Test
     void putState_fakedInvalidParameterValueResponse_exception() {
         setPutResponse("/lights/" + 777 + "/state", "{\"bri\":300}",
-                "[\n" +
-                        "{\"success\":{\"/lights/22/state/transitiontime\":2}}," +
-                        "{\n" +
-                        "\"error\": {\n" +
-                        "\"type\": 7,\n" +
-                        "\"address\": \"/lights/22/state/bri\",\n" +
-                        "\"description\": \"invalid value, 300}, for parameter, bri\"\n" +
-                        "}\n" +
-                        "}\n" +
-                        "]");
+                """
+                        [
+                          {
+                            "success": {
+                              "/lights/22/state/transitiontime": 2
+                            }
+                          },
+                          {
+                            "error": {
+                              "type": 7,
+                              "address": "/lights/22/state/bri",
+                              "description": "invalid value, 300}, for parameter, bri"
+                            }
+                          }
+                        ]""");
 
         ApiFailure apiFailure = assertThrows(ApiFailure.class, () -> performPutCall(PutCall.builder().id("777").bri(300).build()));
         assertThat(apiFailure.getMessage()).isEqualTo("invalid value, 300}, for parameter, bri");
@@ -1245,15 +1268,16 @@ class HueApiTest {
 
     @Test
     void putState_parameterNotModifiable_becauseLightIsOff_noExceptionThrown_ignored() {
-        setPutResponse("/lights/" + 777 + "/state", "{\"bri\":200}", "[\n" +
-                "{\n" +
-                "\"error\": {\n" +
-                "\"type\": 201,\n" +
-                "\"address\": \"/lights/777/state/bri\",\n" +
-                "\"description\": \"parameter, bri, is not modifiable. Device is set to off.\"\n" +
-                "}\n" +
-                "}\n" +
-                "]");
+        setPutResponse("/lights/" + 777 + "/state", "{\"bri\":200}", """
+                [
+                  {
+                    "error": {
+                      "type": 201,
+                      "address": "/lights/777/state/bri",
+                      "description": "parameter, bri, is not modifiable. Device is set to off."
+                    }
+                  }
+                ]""");
 
         performPutCall(PutCall.builder().id("777").bri(200).build());
     }
@@ -1261,14 +1285,15 @@ class HueApiTest {
     @Test
     void isLightOff_stateIsOn_false() {
         String lightId = "2";
-        setGetResponse("/lights/" + lightId, "{\n"
-                + "  \"state\": {\n"
-                + "    \"on\": true,\n"
-                + "    \"reachable\": true\n"
-                + "  },\n"
-                + "  \"name\": \"Name 2\",\n"
-                + "  \"type\": \"On/Off plug-in unit\"\n"
-                + "}");
+        setGetResponse("/lights/" + lightId, """
+                {
+                  "state": {
+                    "on": true,
+                    "reachable": true
+                  },
+                  "name": "Name 2",
+                  "type": "On/Off plug-in unit"
+                }""");
 
         assertThat(isLightOff(lightId)).isFalse();
     }
@@ -1276,14 +1301,15 @@ class HueApiTest {
     @Test
     void isLightOff_stateIsOn_andUnreachable_stillFalse() {
         String lightId = "1";
-        setGetResponse("/lights/" + lightId, "{\n"
-                + "  \"state\": {\n"
-                + "    \"on\": true,\n"
-                + "    \"reachable\": false\n"
-                + "  },\n"
-                + "  \"name\": \"Name 2\",\n"
-                + "  \"type\": \"On/Off plug-in unit\"\n"
-                + "}");
+        setGetResponse("/lights/" + lightId, """
+                {
+                  "state": {
+                    "on": true,
+                    "reachable": false
+                  },
+                  "name": "Name 2",
+                  "type": "On/Off plug-in unit"
+                }""");
 
         assertThat(isLightOff(lightId)).isFalse();
     }
@@ -1291,14 +1317,15 @@ class HueApiTest {
     @Test
     void isLightOff_stateIsOff_true() {
         String lightId = "4";
-        setGetResponse("/lights/" + lightId, "{\n"
-                + "  \"state\": {\n"
-                + "    \"on\": false,\n"
-                + "    \"reachable\": true\n"
-                + "  },\n"
-                + "  \"name\": \"Name 2\",\n"
-                + "  \"type\": \"On/Off plug-in unit\"\n"
-                + "}");
+        setGetResponse("/lights/" + lightId, """
+                {
+                  "state": {
+                    "on": false,
+                    "reachable": true
+                  },
+                  "name": "Name 2",
+                  "type": "On/Off plug-in unit"
+                }""");
 
         assertThat(isLightOff(lightId)).isTrue();
     }
@@ -1306,21 +1333,22 @@ class HueApiTest {
     @Test
     void isGroupOff_anyOn_isTrue_returnsFalse() {
         String groupId = "5";
-        setGetResponse("/groups/" + groupId, "{\n" +
-                "  \"name\": \"Group\",\n" +
-                "  \"lights\": [\n" +
-                "    \"1\",\n" +
-                "    \"2\"\n" +
-                "  ],\n" +
-                "  \"sensors\": [],\n" +
-                "  \"type\": \"Room\",\n" +
-                "  \"state\": {\n" +
-                "    \"all_on\": true,\n" +
-                "    \"any_on\": true\n" +
-                "  },\n" +
-                "  \"recycle\": false,\n" +
-                "  \"class\": \"Living room\"\n" +
-                "}");
+        setGetResponse("/groups/" + groupId, """
+                {
+                  "name": "Group",
+                  "lights": [
+                    "1",
+                    "2"
+                  ],
+                  "sensors": [],
+                  "type": "Room",
+                  "state": {
+                    "all_on": true,
+                    "any_on": true
+                  },
+                  "recycle": false,
+                  "class": "Living room"
+                }""");
 
         assertThat(api.isGroupOff(groupId)).isFalse();
     }
@@ -1328,21 +1356,22 @@ class HueApiTest {
     @Test
     void isGroupOff_allOn_isFalse_returnsFalse() {
         String groupId = "4";
-        setGetResponse("/groups/" + groupId, "{\n" +
-                "  \"name\": \"Group\",\n" +
-                "  \"lights\": [\n" +
-                "    \"1\",\n" +
-                "    \"2\"\n" +
-                "  ],\n" +
-                "  \"sensors\": [],\n" +
-                "  \"type\": \"Room\",\n" +
-                "  \"state\": {\n" +
-                "    \"all_on\": false,\n" +
-                "    \"any_on\": true\n" +
-                "  },\n" +
-                "  \"recycle\": false,\n" +
-                "  \"class\": \"Living room\"\n" +
-                "}");
+        setGetResponse("/groups/" + groupId, """
+                {
+                  "name": "Group",
+                  "lights": [
+                    "1",
+                    "2"
+                  ],
+                  "sensors": [],
+                  "type": "Room",
+                  "state": {
+                    "all_on": false,
+                    "any_on": true
+                  },
+                  "recycle": false,
+                  "class": "Living room"
+                }""");
 
         assertThat(api.isGroupOff(groupId)).isFalse();
     }
@@ -1350,21 +1379,22 @@ class HueApiTest {
     @Test
     void isGroupOff_anyOn_isFalse_returnsTrue() {
         String groupId = "4";
-        setGetResponse("/groups/" + groupId, "{\n" +
-                "  \"name\": \"Group\",\n" +
-                "  \"lights\": [\n" +
-                "    \"1\",\n" +
-                "    \"2\"\n" +
-                "  ],\n" +
-                "  \"sensors\": [],\n" +
-                "  \"type\": \"Room\",\n" +
-                "  \"state\": {\n" +
-                "    \"all_on\": false,\n" +
-                "    \"any_on\": false\n" +
-                "  },\n" +
-                "  \"recycle\": false,\n" +
-                "  \"class\": \"Living room\"\n" +
-                "}");
+        setGetResponse("/groups/" + groupId, """
+                {
+                  "name": "Group",
+                  "lights": [
+                    "1",
+                    "2"
+                  ],
+                  "sensors": [],
+                  "type": "Room",
+                  "state": {
+                    "all_on": false,
+                    "any_on": false
+                  },
+                  "recycle": false,
+                  "class": "Living room"
+                }""");
 
         assertThat(api.isGroupOff(groupId)).isTrue();
     }
@@ -1373,19 +1403,19 @@ class HueApiTest {
         return api.isLightOff(lightId);
     }
 
-    private void setGetResponse(String expectedUrl, String response) {
+    private void setGetResponse(String expectedUrl, @Language("JSON") String response) {
         when(resourceProviderMock.getResource(getUrl(expectedUrl))).thenReturn(response);
     }
 
     private URL getUrl(String expectedUrl) {
         try {
-            return new URL(baseUrl + expectedUrl);
-        } catch (MalformedURLException e) {
+            return new URI(baseUrl + expectedUrl).toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new IllegalArgumentException("Could not create URL", e);
         }
     }
 
-    private void setPutResponse(String expectedUrl, String expectedBody, String response) {
+    private void setPutResponse(String expectedUrl, String expectedBody, @Language("JSON") String response) {
         when(resourceProviderMock.putResource(getUrl(expectedUrl), expectedBody)).thenReturn(response);
     }
 
